--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div><h1>Állatorvosi rendelő sikeresen elindult.</h1></div>
     </body>
 </html>
